# Tiki-V2

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.automaker/: notifications.json
.automaker/events/: evt-1770135142212-ce87c25c.json  evt-1770135542022-5f47fa60.json  index.json
.claude/: settings.json  settings.local.json
.github/workflows/: pr.yml  release.yml
.tiki/: config.json  journal.ndjson  smoke-test.md  state.json
.tiki/hooks/: hooks.json  post-ship.ps1  post-ship.sh
.tiki/plans/: issue-1.json  issue-100.json  issue-101.json  issue-102.json  issue-103.json  issue-105.json  issue-108.json  issue-109.json  issue-110.json  issue-115.json  issue-116.json  issue-117.json  issue-118.json  issue-125.json  issue-127.json  issue-128.json  issue-129.json  issue-130.json  issue-131.json  issue-132.json  issue-133.json  issue-134.json  issue-139.json  issue-140.json  issue-141.json  issue-142.json  issue-144.json  issue-145.json  issue-146.json  issue-147.json  issue-148.json  issue-149.json  issue-150.json  issue-151.json  issue-152.json  issue-153.json  issue-154.json  issue-155.json  issue-156.json  issue-157.json  (+85 more)
.tiki/releases/: v0.2.0.json  v0.2.1.json  v0.2.10.json  v0.2.11.json  v0.2.12.json  v0.2.13.json  v0.2.14.json  v0.2.15.json  v0.2.16-changelog.md  v0.2.16.json  v0.2.17-changelog.md  v0.2.18-changelog.md  v0.2.18.json  v0.2.19-changelog.md  v0.2.19.json  v0.2.5.json  v0.2.6.json  v0.2.7.json  v0.2.8.json  v0.2.9.json  v0.3.0-changelog.md  v0.4.0-changelog.md  v0.4.0.json  v0.4.1-changelog.md  v0.4.2-changelog.md  v0.5.0-changelog.md  v0.5.1-changelog.md  v0.5.2-changelog.md  v0.5.3-changelog.md  v0.5.3.json  v0.5.4-changelog.md  v0.5.4.json  v0.5.5-changelog.md  v0.5.5.json  v0.5.6-changelog.md  v0.5.7-changelog.md  v0.5.7.json  v0.6.0-changelog.md  v0.6.0.json  v0.6.1-changelog.md  (+35 more)
.tiki/research/: dependency-graph-plan-data.md  desktop-performance.md  example-research.md  framework-cli-shim.md  issue-103-review.md  issue-116-review.md  issue-118-review.md  issue-145-review.md  issue-146-review.md  issue-87-review.md  (+11 more)
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.tiki/releases/: v0.1.2.json  v0.2.1.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: claude_usage.rs  commands.rs  config.rs  fs_utils.rs  github.rs  lib.rs  main.rs  state.rs  state_transition.rs  watcher.rs
apps/desktop/src-tauri/src/github/: auth.rs  git.rs  issues.rs  labels.rs  mod.rs  pulls.rs  rate_limit.rs  releases.rs
apps/desktop/src-tauri/src/terminal/: commands.rs  mod.rs  pty.rs
apps/desktop/src-tauri/tests/: README.md  state_format_compat.rs
apps/desktop/src-tauri/tests/fixtures/: canonical-current.json  legacy-flat.json  legacy-phases-array.json  legacy-phases-object.json  with-parallel-execution.json  with-parent-release.json
docs/: ARCHITECTURE-REVIEW-2026-06.md  DESIGN.md  ENHANCEMENT-IDEAS.md  FRAMEWORK-DEEP-DIVE.md  HOOKS.md  PLANNING-NOTES.md  STATE-JSON-ANALYSIS.md
scripts/: check-release-readiness.mjs  version-bump.mjs
(+309 files in other folders)
