[package]
name = "tiki-desktop"
version = "0.2.9"
description = "Tiki Desktop - GitHub issue workflow manager"
authors = ["Eric Nichols"]
license = "MIT"
repository = "https://github.com/ericnichols/Tiki-V2"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tiki_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6"
tauri-plugin-updater = "2.10"
tauri-plugin-process = "2"
notify = { version = "8", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt"] }
portable-pty = "0.8"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
