[package]
name = "tiki-desktop"
version = "0.7.3"
description = "Tiki Desktop - GitHub issue workflow manager"
authors = ["Eric Nichols"]
license = "MIT"
repository = "https://github.com/ericnichols/Tiki-V2"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tiki_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

# Pre-existing clippy lints that fire in legacy code paths (state.rs serde
# shims, watcher event enum, etc). Issue #145 introduced cargo clippy --deny
# warnings into CI; pinning these allows keeps CI catching *new* warnings
# without forcing an out-of-scope refactor of legacy modules. Remove these
# entries when the underlying code is cleaned up.
[lints.clippy]
derivable_impls = "allow"
enum_variant_names = "allow"
large_enum_variant = "allow"
unnecessary_map_or = "allow"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6"
tauri-plugin-updater = "2.10"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
notify = { version = "8", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt"] }
portable-pty = "0.8"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
include_dir = "0.7"
